--- a/src/resources/expansionBoard.config
+++ b/src/resources/expansionBoard.config
@@ -114,8 +114,8 @@
 70 79
 74 79
 
-//next line: tile pool: [deserts] [mountains] [pastures] [hill] [field] [forest]
-2 8 9 8 9 9
+//next line: tile pool: [mountain] [pasture] [hill] [field] [forest] [desert] [sea]
+8 9 8 9 9 2 0
 
 //next [# of tiles] lines: [corner1] [corner2] [corner3] [corner4] [corner5] [corner6]
 0 1 2 39 38 37
