--- a/src/resources/standardBoard.config
+++ b/src/resources/standardBoard.config
@@ -76,8 +76,8 @@
 52 53
 53 24
 
-//next line: tile pool: [deserts] [mountains] [pastures] [hill] [field] [forest]
-1 3 4 3 4 4
+//next line: tile pool: [mountain] [pasture] [hill] [field] [forest] [desert] [sea]
+3 4 3 4 4 1 0
 
 //next [# of tiles] lines: [corner1] [corner2] [corner3] [corner4] [corner5] [corner6]
 40 41 42 43 17 16
