Upgraded board rendering to 3D.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ build/classes/resources/images/mountain.png
 build/classes/resources/images/hills.png
 build/classes/resources/images/forest.png
 build/classes/resources/images/desert.png
+nbproject/private/private.xml
